--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-project",
+  "name": "groupomania",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -7,6 +7,8 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "bootstrap": "^5.1.3",
+    "bootstrap-vue-3": "^0.1.13",
     "vue": "^3.2.36",
     "vue-router": "^4.0.15"
   },
